Updated Reposted document and purchase mapper